Initial implementation recording legendInfo by name Fix up ExternalGraphic panel to allow relative URL
Introduction of LegendRequest data structure to prevent more internal hashmaps

KVP parser now resolves relative graphics prior to use. Additional validation checks and warnings.

Validation now also checks image availability, and will provide warning if configured with an external graphic that does not match the request base url.

Update documentation for style editor