@@ -5,9 +5,21 @@
 package org.geoserver.wms.web.data;
 
 import java.awt.image.BufferedImage;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.util.Arrays;
+import java.util.List;
+
 import javax.imageio.ImageIO;
+import javax.servlet.http.HttpServletRequest;
+
+import org.apache.commons.lang.StringUtils;
 import org.apache.wicket.ajax.AjaxRequestTarget;
 import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.basic.Label;
@@ -15,11 +27,28 @@ import org.apache.wicket.markup.html.form.Form;
 import org.apache.wicket.markup.html.form.TextField;
 import org.apache.wicket.markup.html.panel.Panel;
 import org.apache.wicket.model.CompoundPropertyModel;
+import org.apache.wicket.model.IModel;
+import org.apache.wicket.protocol.http.WebRequest;
+import org.apache.wicket.validation.IValidatable;
+import org.apache.wicket.validation.IValidationError;
+import org.apache.wicket.validation.ValidationError;
 import org.apache.wicket.validation.validator.NumberValidator;
+import org.apache.wicket.validation.validator.StringValidator;
 import org.apache.wicket.validation.validator.UrlValidator;
+import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.ResourceInfo;
 import org.geoserver.catalog.StyleInfo;
+import org.geoserver.catalog.impl.CatalogImpl;
+import org.geoserver.config.GeoServer;
+import org.geoserver.ows.util.ResponseUtils;
+import org.geoserver.platform.GeoServerExtensions;
+import org.geoserver.platform.GeoServerResourceLoader;
+import org.geoserver.platform.resource.Paths;
+import org.geoserver.platform.resource.Resource;
+import org.geoserver.platform.resource.Resource.Type;
+import org.geoserver.web.GeoServerApplication;
 import org.geoserver.web.wicket.GeoServerAjaxFormLink;
+import org.h2.util.Resources;
 
 /**
  * Allows setting the data for using an ExternalImage
@@ -29,7 +58,7 @@ import org.geoserver.web.wicket.GeoServerAjaxFormLink;
 @SuppressWarnings("serial")
 public class ExternalGraphicPanel extends Panel {
 
-    private TextField onlineResource;
+    private TextField<String> onlineResource;
     private TextField format;
     private TextField width;
     private TextField height;
@@ -55,8 +84,76 @@ public class ExternalGraphicPanel extends Panel {
         table = new WebMarkupContainer("list");
         table.setOutputMarkupId(true);
         
-        onlineResource = new TextField("onlineResource", styleModel.bind("legend.onlineResource"));
-        onlineResource.add(new UrlValidator());
+        IModel<String> bind = styleModel.bind("legend.onlineResource");
+        onlineResource = new TextField<String>("onlineResource", bind );
+        onlineResource.add(new StringValidator(){
+            final List<String> EXTENSIONS = Arrays.asList(new String[]{"png","gif","jpeg","jpg"});
+            
+            protected void onValidate(IValidatable<String> input) {
+                String value = input.getValue();
+                int last = value == null ? -1 : value.lastIndexOf('.');
+                if (last == -1 || !EXTENSIONS.contains( value.substring(last + 1).toLowerCase() ) ){
+                    ValidationError error = new ValidationError();
+                    error.setMessage( "Not an image" );
+                    error.addMessageKey("nonImage");
+                    input.error(error);
+                    return;
+                }
+                URI uri = null;
+                try {
+                    uri = new URI(value);
+                } catch (URISyntaxException e1) {
+                    // Unable to check if absolute
+                } 
+                if( uri != null && uri.isAbsolute()){
+                    try {
+                        String baseUrl = baseURL(onlineResource.getForm());
+                        if( !value.startsWith(baseUrl)){
+                            onlineResource.warn("Recommend use of styles directory at "+baseUrl);
+                        }
+                        URL url = uri.toURL();
+                        URLConnection conn = url.openConnection();                        
+                        if("text/html".equals(conn.getContentType())){
+                            ValidationError error = new ValidationError();
+                            error.setMessage("Unable to access image");
+                            error.addMessageKey("imageUnavailable");
+                            input.error(error);
+                            return; // error message back!
+                        }
+                    } catch (MalformedURLException e) {
+                        ValidationError error = new ValidationError();
+                        error.setMessage("Unable to access image");
+                        error.addMessageKey("imageUnavailable");
+                        input.error(error);
+                    } catch (IOException e) {
+                        ValidationError error = new ValidationError();
+                        error.setMessage("Unable to access image");
+                        error.addMessageKey("imageUnavailable");
+                        input.error(error);
+                    }
+                    return; // no further checks possible
+                }
+                else {
+                    GeoServerResourceLoader resources = GeoServerApplication.get().getResourceLoader();
+                    try {
+                        File styles = resources.find("styles");
+                        String[] path = value.split(File.separator);
+                        File test = resources.find(styles, path);
+                        if (test == null) {
+                            ValidationError error = new ValidationError();
+                            error.setMessage("File not found in styles directory");
+                            error.addMessageKey("imageNotFound");
+                            input.error(error);
+                        }
+                    } catch (IOException e) {
+                        ValidationError error = new ValidationError();
+                        error.setMessage("File not found in styles directory");
+                        error.addMessageKey("imageNotFound");
+                        input.error(error);
+                    }
+                }
+            }
+        });
         onlineResource.setOutputMarkupId(true);
         table.add(onlineResource);
         
@@ -66,14 +163,37 @@ public class ExternalGraphicPanel extends Panel {
             public void onClick(AjaxRequestTarget target, Form form) {
                 onlineResource.processInput();
                 if (onlineResource.getModelObject() != null) {
+                    URL url = null;
                     try {
-                        URL url = new URL(onlineResource.getModelObject().toString());
-                        URLConnection conn = url.openConnection();
+                        String baseUrl = baseURL(form);                       
+                        String external = onlineResource.getModelObject().toString();
+                        
+                        URI uri = new URI( external );
+                        if( uri.isAbsolute() ){
+                            url = uri.toURL();
+                            if( !external.startsWith(baseUrl)){
+                                form.warn( "Recommend use of styles directory at "+baseUrl);
+                            }
+                        }
+                        else {
+                            url = new URL( baseUrl + "styles/"+external );
+                        }
+                        
+                        URLConnection conn = url.openConnection();                        
+                        if("text/html".equals(conn.getContentType())){
+                            form.error("Unable to access url");
+                            return; // error message back!
+                        }
+                        
                         format.setModelValue(conn.getContentType());
                         BufferedImage image = ImageIO.read(conn.getInputStream());
                         width.setModelValue("" + image.getWidth());
                         height.setModelValue("" + image.getHeight());
+                    } catch (FileNotFoundException notFound ){
+                        form.error( "Unable to access "+url);
                     } catch (Exception e) {
+                        e.printStackTrace();
+                        form.error( "Recommend use of styles directory at "+e);
                     }
                 }
 
@@ -105,7 +225,7 @@ public class ExternalGraphicPanel extends Panel {
             @Override
             public void onClick(AjaxRequestTarget target, Form form) {
                 updateVisibility(true);    
-                target.addComponent(container);                
+                target.addComponent(container);
             }
         };
         container.add(show);            
@@ -133,6 +253,27 @@ public class ExternalGraphicPanel extends Panel {
         boolean visible = url != null && !url.isEmpty();           
         updateVisibility(visible);
         
+    }
+    
+    /**
+     * Lookup base URL using provied form
+     * @param form
+     * @see ResponseUtils
+     * @return baseUrl
+     */
+    protected String baseURL(Form form) {
+        WebRequest request = (WebRequest) form.getRequest();
+        HttpServletRequest httpServletRequest;
+        httpServletRequest = ((WebRequest) request).getHttpServletRequest();
+        String baseUrl = GeoServerExtensions.getProperty("PROXY_BASE_URL");
+        if (StringUtils.isEmpty(baseUrl)) {
+            GeoServer gs = GeoServerApplication.get().getGeoServer();
+            baseUrl = gs.getGlobal().getSettings().getProxyBaseUrl();
+            if (StringUtils.isEmpty(baseUrl)) {
+                return ResponseUtils.baseURL(httpServletRequest);
+            }
+        }
+        return baseUrl;
     }
 
     private void updateVisibility(boolean b) {        
